fixed searchbar positon on mobile, added new sections to about page

--- a/threejs/styles/searchBar.css
+++ b/threejs/styles/searchBar.css
@@ -155,8 +155,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    /* top: 60%; */
-    top: auto;
+    top: 15%;
     width: 100%;
     margin: 0;
     padding: 12px;
